# tree-sitter-meson

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  settings.lua  setup.py  tree-sitter.json
.github/workflows/: main.yml  typos.yml
bindings/c/: tree-sitter-meson.pc.in
bindings/c/tree_sitter/: tree-sitter-meson.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_meson/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMesonTests/: TreeSitterMesonTests.swift
corpus/: basetypes.txt  commands.txt  comment.txt  foreach.txt  general.txt  ifelse.txt  option.txt
grammar/: base.js  closure.js  operation.js
grammer/: base.js  closure.js  operation.js
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basetypes.txt  commands.txt  ifelse.txt  option.txt
tests/: meson.build
