[package]
name = "tree-sitter-meson"
description = "A tree-sitter for meson"
version = "1.3.0"
authors = ["Decodetalkers"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "meson"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-meson"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.3"
